--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Project generated folders
+links
+pretrain_labels
+hetero_graphs
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
